[tool.poetry]
name = "face-effect"
version = "0.1.0"
description = ""
authors = ["Mateus Assis <mateus.assis@geowellex.com>"]
readme = "README.md"
packages = [{include = "face_effect"}]

[tool.poetry.dependencies]
python = "^3.9"
mediapipe = "^0.9.2.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
